# duck

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  setup-manjaro.sh  setup-user.sh
.github/: dependabot.yml
.github/workflows/: dt-rust-tests.yml  duck-tools-rust-tests.yml  ram-rust-tests.yml  rclio-rust-tests.yml  rooster-docker-tests.yml  rooster-rust-tests.yml  rpassword-rust-tests.yml  rprompt-rust-tests.yml  rsmtp-rust-tests.yml  rutil-rust-tests.yml  sync.yml
projects/: Cargo.toml
projects/dt/: Cargo.toml  README.md
projects/dt/src/: command.rs  main.rs  rclio.rs  repo_history.rs  rpassword.rs  validation.rs
projects/dt/src/command/: cargo_test.rs  repo_funding.rs  repo_history.rs  repo_rsync.rs
projects/duck-tools/: Cargo.toml  README.md
projects/duck-tools/src/: main.rs
projects/ram/: Cargo.toml  README.md
projects/ram/.github/workflows/: ram-rust-tests.yml
projects/ram/examples/: example.rs  let-it-be-42.rs
projects/ram/src/: lib.rs  ram.rs
projects/ram/tests/: shell_language_automaton.rs
projects/rclio/: Cargo.toml  README.md
projects/rclio/.github/workflows/: rclio-rust-tests.yml
projects/rclio/src/: lib.rs
projects/rclio/src/rclio/: all.rs
projects/rooster/: Cargo.toml
projects/rooster-arch/: .SRCINFO  PKGBUILD
projects/rooster/src/: aes.rs  clip.rs  ffi.rs  generate.rs  io.rs  lib.rs  list.rs  main.rs  rclio  rpassword  rprompt  rprompt.rs  rutil.rs
projects/rooster/src/commands/: add.rs  change.rs  delete.rs  export.rs  generate.rs  get.rs  import.rs  init.rs  list.rs  regenerate.rs  rename.rs  set_master_password.rs  set_scrypt_params.rs  transfer.rs
projects/rooster/src/password/: mod.rs  v1.rs  v2.rs
projects/rooster/tests/: helpers.rs  test-commands-add.rs  test-commands-change.rs  test-commands-delete.rs  test-commands-export.rs  test-commands-generate.rs  test-commands-get.rs  test-commands-import.rs  test-commands-list.rs  test-commands-regenerate.rs  test-commands-rename.rs  test-commands-set-master-password.rs  test-commands-set-scrypt-params.rs  test-commands-transfer.rs  test-corruption.rs  test-password-retry.rs
projects/rpassword/: Cargo.toml
projects/rpassword/src/: rutil
projects/rprompt/src/: rutil
projects/rsmtp/: Cargo.toml  README.md
projects/rsmtp/examples/: server.rs
projects/rsmtp/src/: lib.rs
projects/rsmtp/src/client/: mod.rs
projects/rsmtp/src/common/: mailbox.rs  mod.rs  stream.rs  utils.rs
projects/rsmtp/src/server/: mod.rs
projects/rsmtp/src/server/commands/: ehlo.rs  helo.rs  mail.rs  mod.rs  rcpt.rs
projects/rsmtp/tests/stream/: 1line1  1line2  2lines1  write_line  xlines1
projects/rtoolbox/: Cargo.toml  README.md
projects/rtoolbox/.github/workflows/: rutil-rust-tests.yml
projects/rtoolbox/src/: print_tty.rs
projects/rutil/: Cargo.toml  README.md
projects/rutil/.github/workflows/: rutil-rust-tests.yml
projects/rutil/src/: fix_new_line.rs  lib.rs  safe_string.rs  safe_vec.rs  stdin_is_tty.rs
