[package]
name = "dt"
version = "0.1.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/duck"
homepage = "https://github.com/conradkleinespel/duck"
description = "Tools to manage the duck repository"

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4"
env_logger = "0.8"
tempfile = "3.1"