[package]
name = "dt"
version = "0.1.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/duck"
homepage = "https://github.com/conradkleinespel/duck"
description = "Tools to manage the duck repository"

[dependencies]
clap = "4.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
tempfile = "3.1"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ansi_term = "0.12"
rclio = { path = "../rclio" }
