[package]
name = "rclio"
version = "0.1.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
edition = "2018"
publish = false

[dependencies]
ansi_term = "0.12"
rprompt = { path = "../rprompt", version = "1.0" }
rpassword =  { path = "../rpassword", version = "5.0" }

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"]
