[package]
name = "rtoolbox"
version = "0.0.1"
description = "Utility functions for other crates, no backwards compatibility guarantees."
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"]
