[package]
name = "rutil"
version = "0.1.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "winnt", "fileapi", "processenv", "winbase", "handleapi", "consoleapi", "minwindef", "wincon"]
